# core

./: CHANGELOG.md  CLAUDE.md  Makefile  README.md  compose.yml  default.env  eslint.config.js  package-lock.json  package.json  pyproject.toml  skills-lock.json
.github/PULL_REQUEST_TEMPLATE/: pipeline.md  server.md  system.md  workstation.md
.github/workflows/: ci-orchestrator.yml  cleanup-stale.yml  delete-branch.yml  entry-pull-request-cancel.yml  entry-pull-request-change.yml  entry-push-latest.yml  images-build-ci.yml  images-cleanup-ci.yml  images-mirror-all.yml  images-mirror-cleanup.yml  images-mirror-missing.yml  lint-ansible.yml  lint-docker.yml  lint-javascript.yml  lint-makefile.yml  lint-markdown.yml  lint-packages.yml  lint-playwright.yml  lint-python.yml  lint-shell.yml  release-highest.yml  release-version.yml  security-codeql.yml  test-code-external.yml  test-code-integration.yml  test-code-lint.yml  test-code-unit.yml  test-deploy-local.yml  test-deploy-server.yml  test-deploy-universal.yml  test-deploy-workstation.yml  test-dns.yml  test-environment.yml  test-install-make.yml  test-install-pkgmgr.yml  test-runner-smoke.yml  update.yml
cli/contributing/requirements/: README.md
cli/core/: app.py
cli/deploy/: README.md
cli/deploy/runner/: __init__.py  command.py
cli/meta/ci/: subset_roles.py
compose/: Corefile
compose/package-cache/: npmrc  pip.conf
docs/administration/: ci-runners.md  deploy.md
docs/changelog/: 003.000.000-2026-02-11.md
docs/contributing/actions/: deploy.md  testing.md
docs/contributing/design/: exceptions.md  inventory.md  variants.md
docs/contributing/environment/: hardware.md  setup.md
docs/requirements/: 002-service-registry-refactoring.md  003-reduce-applications-and-users-to-lookup.md  004-generic-rbac-ldap-auto-provisioning.md  006-playwright-service-gated-tests.md  007-wordpress-discourse-post-round-trip.md  008-role-meta-layout.md  009-per-role-networks-and-ports.md  010-role-meta-runafter-lifecycle-migration.md  011-role-meta-info-migration.md  013-alpha-to-beta-promotion.md  014-svc-runner-ci.md  015-kix-itsm-integration.md  015-moodle-self-built.md  015-opencloud-opentalk-iam-integration.md  016-fediwall-multi-wall-runtime-upload.md  016-web-app-hugo.md  017-playwright-biber-rbac-coverage.md  018-playwright-ldap-coverage.md  019-playwright-meta-services-parity.md  020-ci-run-25705903504-deploy-remediation.md  021-sso-flavor-migration.md  022-web-app-zammad.md  023-setup-penpot.md  025-mcp-role-integration.md  025-web-app-matrix-ansible-flavor.md  026-unified-addon-syntax.md  027-integration-matrix.gen.py  027-integration-matrix.md  028-unified-addon-syntax.md  README.md  integration_matrix_data.py
docs/security/: user.md
group_vars/all/: 00_general.yml  02_tls.yml  08_networks.yml
inventories/bundles/: README.md
inventories/development/: default.yml
packaging/arch/: PKGBUILD
packaging/debian/: .gitignore  changelog  control  postinst
packaging/fedora/: infinito-nexus.spec
plugins/action/: uri_retry.py
plugins/filter/: compose_volumes.py  role_has_nocheck.py  role_has_required_by.py  role_is_invokable.py
plugins/lookup/: addon_env_flags.py  current_play_redirect_domains.py  database.py  deployment.py  minio.py  objstore.py  playwright_workers.py  rbac_group_path.py  service.py  sso.py  sso_oidc_plugin.py  sso_proxy_consumers.py
roles/desk-chromium/: README.md
roles/desk-chromium/meta/: services.yml
roles/desk-chromium/templates/: extensions_policy.json.j2
roles/desk-firefox/: README.md
roles/desk-firefox/meta/: services.yml
roles/desk-firefox/templates/: policies.json.j2
roles/desk-gnome/: README.md
roles/desk-gnome-extensions/: README.md
roles/desk-gnome/meta/: services.yml  variants.yml
roles/desk-gnome/tasks/: 01_core.yml  02_extensions.yml
roles/dev-nix/files/: purge_stale_nixbld.sh
roles/dev-nix/tasks/: 02_non_arch_installer.yml  02a_nix_install_only.yml  03_install_official.yml
roles/pkgmgr/meta/: services.yml
roles/svc-ai-ollama/meta/: variants.yml
roles/svc-bkp-container-2-local/meta/: variants.yml
roles/svc-db-mariadb/meta/: services.yml
roles/svc-db-memcached/tasks/: 01_core.yml  main.yml
roles/svc-db-redis/tasks/: main.yml
roles/svc-prx-openresty/tasks/: 01_core.yml
roles/svc-runner/: README.md
roles/svc-runner/defaults/: main.yml
roles/svc-runner/files/: Dockerfile  entrypoint.sh  test.sh
roles/svc-runner/meta/: main.yml  server.yml  services.yml
roles/svc-runner/tasks/: cleanup_instance.yml  instance.yml  main.yml
roles/sys-service-loader/: README.md  TODO.md
roles/sys-stk-front-proxy/: README.md
roles/sys-svc-compose/: README.md
roles/sys-svc-proxy/: README.md
roles/test-e2e-playwright/: README.md
roles/web-app-baserow/: README.md
roles/web-app-bluesky/: README.md
roles/web-app-bridgy-fed/: README.md
roles/web-app-decidim/: README.md
roles/web-app-fediwall/: TODO.md
roles/web-app-fider/: README.md
roles/web-app-friendica/: TODO.md
roles/web-app-fusiondirectory/: README.md
roles/web-app-hugo/: Administration.md
roles/web-app-jitsi/: README.md
roles/web-app-joomla/: README.md
roles/web-app-keycloak/: TODO.md
roles/web-app-kix/: README.md
roles/web-app-matrix/: README.md
roles/web-app-mattermost/: README.md
roles/web-app-n8n/: README.md
roles/web-app-nextcloud/: README.md
roles/web-app-odoo/: README.md
roles/web-app-penpot/: README.md
roles/web-app-pihole/: README.md
roles/web-app-postmarks/: README.md
roles/web-app-pretix/: README.md
roles/web-app-seaweedfs/: README.md
roles/web-app-snipe-it/: README.md
roles/web-svc-libretranslate/: README.md
scripts/docker/: entry.sh
scripts/lint/: action.sh  packages.sh
scripts/make/: help.sh
scripts/tests/: dns.sh
tasks/stages/: 01_constructor.yml  02_server.yml
utils/: parse_trace.py
utils/cache/: base.py
utils/cleanup/: nginx_vhosts.py  pycache_only_dirs.py
utils/handler/: vault.py
utils/install/: github_release.py  primitives.py
utils/inventory/: bundle_apps.py
utils/manager/: inventory.py  value_generator.py
(+970 files in other folders)
